# minbpe-reimplementation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
examples/: train_taylor_swift_tokenizer.py
original/: basic_tokenizer.py  gpt4_tokenizer.py  minbpe_base.py  regex_tokenizer.py  test_tokenizer.py  tswift_tokens.py
src/bpe_tokenizer/: __init__.py  base.py  basic.py  regex.py
tests/: test_tokenizer.py
